cmake_minimum_required(VERSION 3.26)
project(Lobato_JuanPablo_Examen2CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ej_1_CPP
        Estudiantes.cpp)
add_executable(Ej_1_C
        Estudiantes.c)
add_executable(Ej_2_CPP
        Materia.cpp)
add_executable(Ej_2_C
        Materia.c)
add_executable(Ej_3_CPP
        Asistencia.cpp)
add_executable(Ej_3_C
        Asistencia.c)

